Frontend app. Inventory screen, tools screen and tools implementation (dice, timer and stopwatch)
