# backend/IAM/src/routes/auth.routes.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 
-const { register, login } = require('../controllers/auth.controller');
+const { register, login, refresh } = require('../controllers/auth.controller');
 const { registerSchema, loginSchema } = require('../validators/auth.validator');
 const validate = require('../middlewares/validate');
 
@@ -10,5 +10,8 @@ router.post('/register', validate(registerSchema), register);
 
 // Login del usuario
 router.post('/login', validate(loginSchema), login);
+
+router.post('/refresh', refresh);
+
 
 module.exports = router;
